kotlin/semlang-parser/src/test/semlang/validatorTests/fail/dataType1.sem
function dataEqualsWrapper<T>(left: T, right: T): Boolean {
  Data.equals<T>(left, right)
}
